fixed submit button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,7 @@ form label {
 form li {
   list-style: none;
 }
+
+button {
+  margin-top: 20px;
+}
